--- a/src/components/Buttons.module.css
+++ b/src/components/Buttons.module.css
@@ -1,11 +1,15 @@
-.BackButton {
+.RoundButton {
 	border-radius: 50%;
 	width: 40px;
 	height: 40px;
 	padding:10px;
-	background-color: rgba(50, 50, 200, .7);
-	margin-top: 20px;	
+	background-color: rgba(10, 10, 250, .7);	
 	color:white;	
 	z-index: 9999;
 	display: inline-block;		
+}
+
+.Container {
+	text-align: center;
+	margin-top: 0px;
 }
