Estilos vista medicion velocidad

--- a/src/components/Velocity/Velocity.module.css
+++ b/src/components/Velocity/Velocity.module.css
@@ -15,3 +15,15 @@
     left: 0px;
     z-index: 1;    
 }
+
+.Table {
+    text-align: right!important;
+}
+
+.Table td {
+    padding: 0px;
+}
+
+.Table th {
+    padding: 0px!important;
+}
