Grafico perfil fertilizacion

--- a/src/index.css
+++ b/src/index.css
@@ -8,8 +8,8 @@
 	background-color: #636363;
 }
 
-.app {
-	border: 1px solid lightgray;	
+.app {	
+	outline: 1px solid lightgray;
 	max-width: 650px;
 	margin: 0 auto;
 }
