--- a/src/components/Inputs.module.css
+++ b/src/components/Inputs.module.css
@@ -3,8 +3,7 @@
 }
 
 .Input {
-    padding: 0px;    
-    margin-top: -10px;    
+    padding: 2px;    
 }
 
 .UnitLabel {
@@ -13,4 +12,10 @@
     right: 50px;
     z-index: 999;
     color: rgb(150,150,150);
+}
+
+.InputIcon {
+    position: absolute;
+    top: 10px;
+    height: 50px;
 }
